Change to a different method of showing the no scans alert to fix the layout problem from the last commit.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -38,8 +38,13 @@ body {
 	height: 15px;
 }
 
+#noScansAlert {
+	display: none;
+}
+
 #scanPanel {
 	position: relative;
+	min-height: 120px;
 }
 
 #scanPanelHead {
